crates/ty_python_semantic/resources/mdtest/snapshots/special_form_attribu…_-_Diagnostics_for_inva…_(249d635e74a41c9e).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: special_form_attributes.md - Diagnostics for invalid attribute access on special forms
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/special_form_attributes.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing_extensions import Any, Final, LiteralString
 2 | 
 3 | X = Any
 4 | 
 5 | class Foo:
 6 |     X: Final = LiteralString
 7 | 
 8 |     class Bar:
 9 |         def __init__(self):
10 |             self.y: Final = LiteralString
11 | 
12 | X.foo  # error: [unresolved-attribute]
13 | X.aaaaooooooo  # error: [unresolved-attribute]
14 | Foo.X.startswith  # error: [unresolved-attribute]
15 | Foo.Bar().y.startswith  # error: [unresolved-attribute]
```

# Diagnostics

```
error[unresolved-attribute]: Special form `typing.Any` has no attribute `foo`
  --> src/mdtest_snippet.py:12:1
   |
10 |             self.y: Final = LiteralString
11 |
12 | X.foo  # error: [unresolved-attribute]
   | ^^^^^
13 | X.aaaaooooooo  # error: [unresolved-attribute]
14 | Foo.X.startswith  # error: [unresolved-attribute]
   |
help: Objects with type `Any` have a `foo` attribute, but the symbol `typing.Any` does not itself inhabit the type `Any`
help: This error may indicate that `X` was defined as `X = typing.Any` when `X: typing.Any` was intended
info: rule `unresolved-attribute` is enabled by default

```

```
error[unresolved-attribute]: Special form `typing.Any` has no attribute `aaaaooooooo`
  --> src/mdtest_snippet.py:13:1
   |
12 | X.foo  # error: [unresolved-attribute]
13 | X.aaaaooooooo  # error: [unresolved-attribute]
   | ^^^^^^^^^^^^^
14 | Foo.X.startswith  # error: [unresolved-attribute]
15 | Foo.Bar().y.startswith  # error: [unresolved-attribute]
   |
help: Objects with type `Any` have an `aaaaooooooo` attribute, but the symbol `typing.Any` does not itself inhabit the type `Any`
help: This error may indicate that `X` was defined as `X = typing.Any` when `X: typing.Any` was intended
info: rule `unresolved-attribute` is enabled by default

```

```
error[unresolved-attribute]: Special form `typing.LiteralString` has no attribute `startswith`
  --> src/mdtest_snippet.py:14:1
   |
12 | X.foo  # error: [unresolved-attribute]
13 | X.aaaaooooooo  # error: [unresolved-attribute]
14 | Foo.X.startswith  # error: [unresolved-attribute]
   | ^^^^^^^^^^^^^^^^
15 | Foo.Bar().y.startswith  # error: [unresolved-attribute]
   |
help: Objects with type `LiteralString` have a `startswith` attribute, but the symbol `typing.LiteralString` does not itself inhabit the type `LiteralString`
help: This error may indicate that `Foo.X` was defined as `Foo.X = typing.LiteralString` when `Foo.X: typing.LiteralString` was intended
info: rule `unresolved-attribute` is enabled by default

```

```
error[unresolved-attribute]: Special form `typing.LiteralString` has no attribute `startswith`
  --> src/mdtest_snippet.py:15:1
   |
13 | X.aaaaooooooo  # error: [unresolved-attribute]
14 | Foo.X.startswith  # error: [unresolved-attribute]
15 | Foo.Bar().y.startswith  # error: [unresolved-attribute]
   | ^^^^^^^^^^^^^^^^^^^^^^
   |
help: Objects with type `LiteralString` have a `startswith` attribute, but the symbol `typing.LiteralString` does not itself inhabit the type `LiteralString`
info: rule `unresolved-attribute` is enabled by default

```
